Fix: change base h1 align center

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,6 +3,7 @@ body {
         font-family: $font-montserrat;
         font-weight: 500;
         font-style: inherit;
+        text-align: center;
     }
 
     p {
